force-app/main/default/objects/TrainingVendor__c/TrainingVendor__c.object-meta.xml
<CustomObject>
    <label>Training Vendor</label>
    <pluralLabel>Training Vendors</pluralLabel>
    <nameField>
        <label>Training Vendor Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>