force-app/main/default/objects/TrainingVendor__c/fields/DueDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>DueDayOfMonth__c</fullName>
    <label>Due Day of Month</label>
    <type>Number</type>
    <precision>2</precision><scale>0</scale>
</CustomField>