force-app/main/default/objects/TrainingVendor__c/listViews/Active_Records.listView-meta.xml
<ListView>
    <fullName>Active_Records</fullName>
    <label>Active Records</label>
    <filterScope>Everything</filterScope>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
</ListView>