force-app/main/default/objects/TrainingVendor__c/listViews/Recently_Created.listView-meta.xml
<ListView>
    <fullName>Recently_Created</fullName>
    <label>Recently Created</label>
    <filterScope>Everything</filterScope>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
</ListView>