force-app/main/default/objects/TrainingVendor__c/listViews/Recently_Updated.listView-meta.xml
<ListView>
    <fullName>Recently_Updated</fullName>
    <label>Recently Updated</label>
    <filterScope>Everything</filterScope>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
</ListView>